--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<h2>학력사항</h2>
 		</header>
 		<div class="content">
-			<p><strong>最终学历</strong> 건국대학원 경제학 2019.9-2021.6<br>
+			<p><strong>최종학력</strong> 건국대학원 경제학 2019.9-2021.6<br>
 				어학원 서울대학교 언어교육원 한국어 2018.6-2019.8<br>
 				대학교 리수이대학교(중국) 국제무역학 2012.9-2016.6<br>
 				<br>
@@ -97,9 +97,9 @@
 				<div class="content">
 					<div class="gallery">
 						<a href="images/gallery/fulls/03.png" class="landscape"><img src="images/gallery/thumbs/03.png" alt="" /></a>
-						<a href="images/gallery/fulls/04.png"><img src="images/gallery/thumbs/04.png" alt="" /></a>
-						<a href="images/gallery/fulls/05.png"><img src="images/gallery/thumbs/05.png" alt="" /></a>
-						<a href="images/gallery/fulls/06.png" class="landscape"><img src="images/gallery/thumbs/06.png" alt="" /></a>
+<!--						<a href="images/gallery/fulls/04.png"><img src="images/gallery/thumbs/04.png" alt="" /></a>-->
+<!--						<a href="images/gallery/fulls/05.png"><img src="images/gallery/thumbs/05.png" alt="" /></a>-->
+<!--						<a href="images/gallery/fulls/06.png" class="landscape"><img src="images/gallery/thumbs/06.png" alt="" /></a>-->
 					</div>
 				</div>
 			</section>
@@ -146,7 +146,7 @@
 						대학원 시절<br>
 						youtuber<br>
 						主要实践：图片编辑，视频剪辑<br>
-						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>
+<!--						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>-->
 					</p>
 				</div>
 			</section>
@@ -185,7 +185,7 @@
 			</p>
 			<div class="content">
 				<div class="gallery">
-					<a href="images/gallery/thumbs/08.mp4" class="landscape"><video controls src="images/gallery/thumbs/08.mp4" height="360" width="640" alt="" /></a>
+<!--					<a href="images/gallery/thumbs/08.mp4" class="landscape"><video controls src="images/gallery/thumbs/08.mp4" height="360" width="640" alt="" /></a>-->
 					<!--											<a href="images/gallery/fulls/08.jpg"><img src="images/gallery/thumbs/08.jpg" alt="" width="200" height="200" /></a>-->
 					<!--											<a href="images/gallery/fulls/09.jpg"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>-->
 				</div>
