--- a/index.html
+++ b/index.html
@@ -144,8 +144,10 @@
 						<br>
 
 						대학원 시절<br>
-						youtuber<br>
-						主要实践：图片编辑，视频剪辑<br>
+						抖音运营兼职<br>
+						主要实践：抖音直播间后台运营，<br>
+						直播时间段产品上架，<br>
+						下播后产品类目选品<br>
 <!--						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>-->
 					</p>
 				</div>
@@ -177,8 +179,7 @@
 			<p><strong>전산능력</strong>
 				<br>
 				MS Office--능숙<br>
-				Adobe PR, jianying--능숙<br>
-				Adobe PS/AI--보통<br>
+				Adobe PR/PS/AI--보통<br>
 				Adobe AE--기초<br>
 				JAVA/SQL--기초<br>
 				<br>
