--- a/index.html
+++ b/index.html
@@ -114,18 +114,14 @@
 					<p>robam 주시회사(중국) 전자상거래 고객서비스<br>
 						2016.7- 2018.1<br>
 						<br>
-						主要工作任务：处理线上客户售前售后产品咨询，处理顾客差评投诉问题，<br>
-						帮助客户解决产品安装，维修，物流，退换货等问题，<br>
-						对接全国各大物流公司和各地线下服务门店等，<br>
-						日均客户接待量100+，电商平台活动时接待量500+<br>
+						주로 업무: A/S 고객서비스<br>
 						<br>
 
 						xiaomi 주시회사(중국) 판매원<br>
 						2018.1- 2018.5<br>
 						<br>
-						主要工作任务：线下门店各类品牌电子产品销售，<br>
-						企业团体批量订单发掘，<br>
-						月均销售额30W+<br>
+						주로 업무：매장 상품 판매<br>
+						<br>
 
 					</p>
 					<div class="gallery">
@@ -135,19 +131,14 @@
 					</div>
 					<h3>다른 경험</h3>
 					<p>대학교 시절<br>
-						aliexpress 온라인 쇼핑몰을 1년동안 경영<br>
-						主要实践：通过代销的方式将淘宝上的商品上架到阿里速卖通平台销售，<br>
-						日常管理订单商品的采购和商家，参加平台活动，<br>
-						联系国际货代公司发货，跟踪物流，<br>
-						处理订单的退换货及评价，<br>
-						年销售利润1W RMB<br>
+						aliexpress 온라인 쇼핑몰을 1년동안 운영<br>
+						주로 업무: aliexpress 쇼핑몰 운영과 온라인 판매<br>
 						<br>
 
 						대학원 시절<br>
-						抖音运营兼职<br>
-						主要实践：抖音直播间后台运营，<br>
-						直播时间段产品上架，<br>
-						下播后产品类目选品<br>
+						douyin 라이브 쇼핑 채널 운영<br>
+						주로 업무: 채널 운영<br>
+						<br>
 <!--						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>-->
 					</p>
 				</div>
