--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<br>
 			<h3>언어성적</h3>
 			<p>한국어: topik6<br>
-				영어: CET4(중국)<br>
+				영어: CET4(중국)
 			</p>
 			</p>
 
@@ -115,13 +115,14 @@
 						2016.7- 2018.1<br>
 						<br>
 						주로 업무: A/S 고객서비스<br>
+						매일 평균 고객수 300+<br>
 						<br>
 
 						xiaomi 주시회사(중국) 판매원<br>
 						2018.1- 2018.5<br>
 						<br>
 						주로 업무：매장 상품 판매<br>
-						<br>
+						매월 매출 평균 30W RMB+
 
 					</p>
 					<div class="gallery">
@@ -133,12 +134,12 @@
 					<p>대학교 시절<br>
 						aliexpress 온라인 쇼핑몰을 1년동안 운영<br>
 						주로 업무: aliexpress 쇼핑몰 운영과 온라인 판매<br>
+						1년 수익 1W RMB+
 						<br>
 
 						대학원 시절<br>
 						douyin 라이브 쇼핑 채널 운영<br>
-						주로 업무: 채널 운영<br>
-						<br>
+						주로 업무: 채널 운영
 <!--						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>-->
 					</p>
 				</div>
@@ -172,8 +173,7 @@
 				MS Office--능숙<br>
 				Adobe PR/PS/AI--보통<br>
 				Adobe AE--기초<br>
-				JAVA/SQL--기초<br>
-				<br>
+				JAVA/SQL--기초
 			</p>
 			<div class="content">
 				<div class="gallery">
