--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 					<p>대학교 시절<br>
 						aliexpress 온라인 쇼핑몰을 1년동안 운영<br>
 						주로 업무: aliexpress 쇼핑몰 운영과 온라인 판매<br>
-						1년 수익 1W RMB+
+						1년 수익 1W RMB+<br>
 						<br>
 
 						대학원 시절<br>
