--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					<p>robam 주시회사(중국) 전자상거래 고객서비스<br>
 						2016.7- 2018.1<br>
 						<br>
-						주로 업무: A/S 고객서비스<br>
+						주로 업무: 온라인 고객센터 문의 상담<br>
 						매일 평균 고객수 300+<br>
 						<br>
 
@@ -139,7 +139,10 @@
 
 						대학원 시절<br>
 						douyin 라이브 쇼핑 채널 운영<br>
-						주로 업무: 채널 운영
+						주로 업무: 채널 운영<br>
+						<br>
+						taobao 개인 온라인 쇼핑몰을 운영<br>
+						주로 업무: taobao 쇼핑몰 운영과 온라인 판매<br>
 <!--						<a href="images/gallery/fulls/油管.gif" class="landscape"><img src="images/gallery/thumbs/油管.gif" height="360" width="640" alt="" /></a>-->
 					</p>
 				</div>
@@ -173,7 +176,6 @@
 				MS Office--능숙<br>
 				Adobe PR/PS/AI--보통<br>
 				Adobe AE--기초<br>
-				JAVA/SQL--기초
 			</p>
 			<div class="content">
 				<div class="gallery">
